--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Montserrat;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     color: white;
 }
 
