--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
     color: white;
 }
 
+button{
+    cursor: pointer;
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
@@ -340,6 +344,36 @@ a:hover{
     word-spacing: 7px;
     font-weight: 400;
 }
+
+.voucher{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.voucher h1{
+    font-family: "Grand Hotel", cursive;
+    font-weight: 100;
+    font-size: 120px;
+}
+
+.getVoucherButton{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.getVoucherButton button{
+    background-color: #29a19c;
+    color: white;
+    padding: 1% 4%;
+    font-size: 30px;
+    font-weight: 600;
+    border: none;
+    border-radius: 12px;
+}
+
 
 
 
